--- a/config.json
+++ b/config.json
@@ -8,8 +8,8 @@
     },
     "test_mode": {
         "enabled": true,
-        "file_name": "qec_jpm_2023_1Q.pdf",
-        "debug_mode": false
+        "file_name": "qec_ubs_2023_1Q.pdf",
+        "debug_mode": true
     },
     "api_setup": {
         "api_key_name": "ANTHROPIC_API_KEY",
@@ -20,9 +20,6 @@
     "cleaning_parameters": {
         "keep_bold_tags": true,
         "keep_italics_tags": false,
-        "keep_linebreak_tags": true,
-        "keep_multispaces_tags": true,
-        "keep_tabs_tags": true,
-        "keep_pagebreak_tags": true
+        "keep_underline_tags": true
     }
 }
