--- a/config.json
+++ b/config.json
@@ -1,14 +1,11 @@
 {
     "folder_paths": {
         "transcripts_pdf_folder": "transcripts_pdf",
-        "transcripts_cleantxt_folder": "transcripts_cleantxt",
-        "metadata_folder": "metadata",
-        "utterances_folder": "utterances",
         "final_json_folder": "final_json"
     },
     "test_mode": {
         "enabled": true,
-        "file_name": "qec_ctg_2023_1Q.pdf",
+        "file_name": "qec_jpm_2023_1Q.pdf",
         "debug_mode": true,
         "diagnostics_folder": "diagnostics"
     },
