--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
     },
     "test_mode": {
         "enabled": true,
-        "file_name": "qec_ctg_2023_1Q.pdf",
+        "file_name": "qec_ubs_2023_1Q.pdf",
         "debug_mode": true,
         "diagnostics_folder": "diagnostics"
     },
@@ -14,11 +14,5 @@
         "model": "claude-3-7-sonnet-20250219",
         "input_cost_per_million": 3.0,
         "output_cost_per_million": 15.0
-    },
-    "cleaning_parameters": {
-        "keep_bold_tags": true,
-        "keep_italics_tags": false,
-        "keep_underline_tags": false,
-        "keep_capitalization_tags": false
     }
 }
